Fix Atlas link wrapping

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -18,7 +18,9 @@ body {
     height: 200px !important;
 }
 
-
+.atlas-link {
+    white-space: nowrap;
+}
 
 // bootstrap overrides
 .btn-primary {
